introduced new blocks to the game with working textures

--- a/src/main/resources/assets/zero/lang/en_us.json
+++ b/src/main/resources/assets/zero/lang/en_us.json
@@ -1,5 +1,11 @@
 {
   "item.zero.cobalt_ingot": "Cobalt Ingot",
-  "item.zero.cobalt_nugget": "Cobalt Nugget"
+  "item.zero.cobalt_nugget": "Cobalt Nugget",
+
+
+
+
+  "block.zero.cobalt_block": "Cobalt Block",
+  "block.zero.cobalt_ore": "Cobalt Ore"
 
 }
