--- a/src/main/resources/assets/zero/lang/en_us.json
+++ b/src/main/resources/assets/zero/lang/en_us.json
@@ -1,11 +1,15 @@
 {
   "item.zero.cobalt_ingot": "Cobalt Ingot",
   "item.zero.cobalt_nugget": "Cobalt Nugget",
+  "item.zero.raw_cobalt": "Raw Cobalt",
+
+
 
 
 
 
   "block.zero.cobalt_block": "Cobalt Block",
-  "block.zero.cobalt_ore": "Cobalt Ore"
-
+  "block.zero.cobalt_ore": "Cobalt Ore",
+  "block.zero.raw_cobalt_block": "Raw Cobalt Block",
+  "block.zero.deepslate_cobalt_ore": "Deep Slate Cobalt Ore"
 }
