--- a/src/main/resources/assets/zero/lang/en_us.json
+++ b/src/main/resources/assets/zero/lang/en_us.json
@@ -2,6 +2,7 @@
   "item.zero.cobalt_ingot": "Cobalt Ingot",
   "item.zero.cobalt_nugget": "Cobalt Nugget",
   "item.zero.raw_cobalt": "Raw Cobalt",
+  "item.zero.dowsing_rod": "Dowsing Rod",
 
 
 
@@ -12,7 +13,12 @@
   "block.zero.cobalt_ore": "Cobalt Ore",
   "block.zero.raw_cobalt_block": "Raw Cobalt Block",
   "block.zero.deepslate_cobalt_ore": "Deep Slate Cobalt Ore",
+  "block.zero.speedy_block": "Speedy Block",
+
+  "itemGroup.coursemodtab": "MCCourse Mod",
 
 
-  "itemGroup.coursemodtab": "MCCourse Mod"
+
+  "item.zero.dowsing_rod.no_valuables": "No Valuables found",
+
 }
