--- a/src/main/resources/assets/zero/lang/en_us.json
+++ b/src/main/resources/assets/zero/lang/en_us.json
@@ -3,6 +3,7 @@
   "item.zero.cobalt_nugget": "Cobalt Nugget",
   "item.zero.raw_cobalt": "Raw Cobalt",
   "item.zero.dowsing_rod": "Dowsing Rod",
+  "item.zero.coal_sliver": "Coal Sliver",
 
   "block.zero.cobalt_block": "Cobalt Block",
   "block.zero.cobalt_ore": "Cobalt Ore",
