--- a/src/main/resources/assets/zero/lang/en_us.json
+++ b/src/main/resources/assets/zero/lang/en_us.json
@@ -4,6 +4,7 @@
   "item.zero.raw_cobalt": "Raw Cobalt",
   "item.zero.dowsing_rod": "Dowsing Rod",
   "item.zero.coal_sliver": "Coal Sliver",
+  "item.zero.turnip": "Turnip",
 
   "block.zero.cobalt_block": "Cobalt Block",
   "block.zero.cobalt_ore": "Cobalt Ore",
