--- a/src/main/resources/assets/zero/lang/en_us.json
+++ b/src/main/resources/assets/zero/lang/en_us.json
@@ -19,5 +19,6 @@
   "item.zero.dowsing_rod.no_valuables": "No Valuables found",
 
   "tooltip.zero.dowsing_rod.tooltip.shift": "Right Click to find valuables",
-  "tooltip.zero.dosing_rod.tooltip": "Press §eShift§r for more Information!"
+  "tooltip.zero.dosing_rod.tooltip": "Press §eShift§r for more Information!",
+  "tooltip.block.speedy_block": "It gets Really speedy!"
 }
