added tool tips

--- a/src/main/resources/assets/zero/lang/en_us.json
+++ b/src/main/resources/assets/zero/lang/en_us.json
@@ -12,6 +12,10 @@
   "block.zero.deepslate_cobalt_ore": "Deep Slate Cobalt Ore",
   "block.zero.speedy_block": "Speedy Block",
 
+  "block.zero.cobalt_stairs": "Cobalt Stair",
+  "block.zero.cobalt_slab": "Cobalt Slab",
+
+
   "itemGroup.coursemodtab": "MCCourse Mod",
 
 
