--- a/src/main/resources/assets/zero/lang/en_us.json
+++ b/src/main/resources/assets/zero/lang/en_us.json
@@ -14,6 +14,8 @@
 
   "block.zero.cobalt_stairs": "Cobalt Stair",
   "block.zero.cobalt_slab": "Cobalt Slab",
+  "block.zero.cobalt_button": "Cobalt button",
+  "block.zero.cobalt_pressure_plate": "Cobalt Pressure Plate",
 
 
   "itemGroup.coursemodtab": "MCCourse Mod",
